--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.2.1
   flutter_feather_icons: ^2.0.0+1
   flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
@@ -83,9 +84,9 @@ flutter:
          - asset: assets/fonts/Nunito-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+     - family: New York Small
+       fonts:
+         - asset: assets/fonts/FontsFree-Net-NewYorkSmallRegular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
