--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,15 @@ flutter:
      - family: New York Small
        fonts:
          - asset: assets/fonts/FontsFree-Net-NewYorkSmallRegular.ttf
+     - family: NunitoBlack
+       fonts:
+         - asset: assets/fonts/Nunito-Black.ttf
+     - family: NunitoMed
+       fonts:
+         - asset: assets/fonts/Nunito-Medium.ttf
+     - family: NunitoBold
+       fonts:
+         - asset: assets/fonts/Nunito-Bold.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
