--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   dio: ^5.5.0+1
   either_dart: ^1.0.0
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
