--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dio: ^5.5.0+1
   either_dart: ^1.0.0
   device_preview: ^1.2.0
+  flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
