--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
   cached_network_image: ^3.4.0
+  heroicons: ^0.10.0
 
 dev_dependencies:
   flutter_test:
