--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_it: ^7.7.0
   cached_network_image: ^3.4.0
   heroicons: ^0.10.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
