--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cached_network_image: ^3.4.0
   heroicons: ^0.10.0
   shared_preferences: ^2.3.2
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_test:
