--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   heroicons: ^0.10.0
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
